# trinket-rs

./: CLAUDE.md  Cargo.toml  DESIGN.md  build.rs
src/: app.rs  clipboard.rs  hotkeys.rs  main.rs
src/storage/: file_ops.rs  indexer.rs  mod.rs
src/ui/: add_window.rs  get_window.rs  mod.rs
