[package]
name = "trinket"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core egui framework
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = "0.29"
# egui_code_editor = "0.2"  # Removed due to version conflicts

# System integration
tray-icon = "0.21"
global-hotkey = "0.7"
arboard = "3.4"

# File operations
notify = "7.0"
notify-debouncer-full = "0.5"
tempfile = "3.14"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
