[package]
name = "trinket"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core egui framework
eframe = { version = "0.32", features = ["default"] }
egui = "0.32"
egui_extras = "0.32"
# egui_code_editor = "0.2"  # Removed due to version conflicts

# System integration
tray-icon = "0.21"
global-hotkey = "0.7"
arboard = "3.6"

# File operations
notify = "8.1"
notify-debouncer-full = "0.5"
tempfile = "3.20"

# Utilities
uuid = { version = "1.17", features = ["v4"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", features = ["ico"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
